installdir = $(libdir)/enigma2/python/Plugins/SkinComponents/WeatherComponent
converterinstalldir = $(libdir)/enigma2/python/Components/Converter
componentsinstalldir = $(libdir)/enigma2/python/Components
rendererinstalldir = $(libdir)/enigma2/python/Components/Renderer
sourcesinstalldir = $(libdir)/enigma2/python/Components/Sources
install_DATA = README
componentsinstall_PYTHON = Components/WeatherMSN.py
converterinstall_PYTHON = Components/Converter/*.py
rendererinstall_PYTHON = Components/Renderer/*.py
sourcesinstall_PYTHON = Components/Sources/MSNWeather.py
