installdir = $(libdir)/enigma2/python/Plugins/SkinComponents/WeatherComponent
converterinstalldir = $(libdir)/enigma2/python/Components/Converter
componentsinstalldir = $(libdir)/enigma2/python/Components
rendererinstalldir = $(libdir)/enigma2/python/Components/Renderer
sourcesinstalldir = $(libdir)/enigma2/python/Components/Sources
install_DATA = README
componentsinstall_PYTHON = Components/WeatherMSN.py Components/WeatherMSN3.py
converterinstall_PYTHON = Components/Converter/MSNWeather.py Components/Converter/MSNWeather3.py
rendererinstall_PYTHON = Components/Renderer/MSNWeatherPixmap.py Components/Renderer/ArAnimatedWeatherPixmap.py
sourcesinstall_PYTHON = Components/Sources/MSNWeather.py Components/Sources/MSNWeather3.py
